[project]
name = "test-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard]>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[aiosqlite,postgresql-asyncpg]>=2.0.44",
    "jinja2>=3.1.6",
    "typer>=0.20.0",
    "requests>=2.32.5",
]
